Añadidas gráficas y arreglados fallos en los resultados

--- a/Práctica5/memoria/MemoriaPractica5.tex
+++ b/Práctica5/memoria/MemoriaPractica5.tex
@@ -459,17 +459,17 @@ Media         & \multicolumn{1}{c|}{98,0319}                                    
 \hline
               &                                                                               & Wdbc                                                                         &                              &          &                                                                               & Movement                                                                     & Libras                       &          &                                                                               & Arrhythmia                                                                   &                              &           \\ \cline{2-13} 
               & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T         \\ \hline
-Partición 1-1 & \multicolumn{1}{c|}{99,6479}                                                  & \multicolumn{1}{c|}{95,0877}                                                 & \multicolumn{1}{c|}{56,6667} & 85,2651  & \multicolumn{1}{c|}{73,8889}                                                  & \multicolumn{1}{c|}{73,3333}                                                 & \multicolumn{1}{c|}{58,8889} & 147,7682 & \multicolumn{1}{c|}{77,0833}                                                  & \multicolumn{1}{c|}{64,4330}                                                 & \multicolumn{1}{c|}{0,5324}  & 805,4652  \\ \hline
-Partición 1-2 & \multicolumn{1}{c|}{97,1930}                                                  & \multicolumn{1}{c|}{98,2394}                                                 & \multicolumn{1}{c|}{46,6667} & 97,1011  & \multicolumn{1}{c|}{80,0000}                                                  & \multicolumn{1}{c|}{76,6667}                                                 & \multicolumn{1}{c|}{62,2222} & 130,1093 & \multicolumn{1}{c|}{72,6804}                                                  & \multicolumn{1}{c|}{63,5417}                                                 & \multicolumn{1}{c|}{0,5144}  & 797,8680  \\ \hline
-Partición 2-1 & \multicolumn{1}{c|}{97,5352}                                                  & \multicolumn{1}{c|}{96,4912}                                                 & \multicolumn{1}{c|}{63,3333} & 73,5152  & \multicolumn{1}{c|}{76,6667}                                                  & \multicolumn{1}{c|}{79,4444}                                                 & \multicolumn{1}{c|}{47,7778} & 161,7477 & \multicolumn{1}{c|}{73,4375}                                                  & \multicolumn{1}{c|}{65,4639}                                                 & \multicolumn{1}{c|}{0,5216}  & 971,4121  \\ \hline
-Partición 2-2 & \multicolumn{1}{c|}{98,9474}                                                  & \multicolumn{1}{c|}{95,0704}                                                 & \multicolumn{1}{c|}{40,0000} & 107,9068 & \multicolumn{1}{c|}{74,4444}                                                  & \multicolumn{1}{c|}{72,2222}                                                 & \multicolumn{1}{c|}{57,7778} & 140,0962 & \multicolumn{1}{c|}{78,8660}                                                  & \multicolumn{1}{c|}{70,3125}                                                 & \multicolumn{1}{c|}{0,4712}  & 867,8862  \\ \hline
-Partición 3-1 & \multicolumn{1}{c|}{98,9437}                                                  & \multicolumn{1}{c|}{94,3860}                                                 & \multicolumn{1}{c|}{50,0000} & 90,5736  & \multicolumn{1}{c|}{76,1111}                                                  & \multicolumn{1}{c|}{73,8889}                                                 & \multicolumn{1}{c|}{46,6667} & 173,6694 & \multicolumn{1}{c|}{77,0833}                                                  & \multicolumn{1}{c|}{64,4330}                                                 & \multicolumn{1}{c|}{0,5827}  & 916,5146  \\ \hline
-Partición 3-2 & \multicolumn{1}{c|}{98,2456}                                                  & \multicolumn{1}{c|}{93,6620}                                                 & \multicolumn{1}{c|}{53,3333} & 98,4654  & \multicolumn{1}{c|}{79,4444}                                                  & \multicolumn{1}{c|}{75,0000}                                                 & \multicolumn{1}{c|}{53,3333} & 151,6055 & \multicolumn{1}{c|}{75,2577}                                                  & \multicolumn{1}{c|}{66,6667}                                                 & \multicolumn{1}{c|}{0,5396}  & 777,3816  \\ \hline
-Partición 4-1 & \multicolumn{1}{c|}{97,5352}                                                  & \multicolumn{1}{c|}{96,8421}                                                 & \multicolumn{1}{c|}{36,6667} & 121,3363 & \multicolumn{1}{c|}{75,0000}                                                  & \multicolumn{1}{c|}{78,8889}                                                 & \multicolumn{1}{c|}{58,8889} & 139,0470 & \multicolumn{1}{c|}{73,9583}                                                  & \multicolumn{1}{c|}{63,9175}                                                 & \multicolumn{1}{c|}{0,5072}  & 1047,3006 \\ \hline
-Partición 4-2 & \multicolumn{1}{c|}{97,8947}                                                  & \multicolumn{1}{c|}{95,7746}                                                 & \multicolumn{1}{c|}{50,0000} & 102,9689 & \multicolumn{1}{c|}{82,2222}                                                  & \multicolumn{1}{c|}{66,1111}                                                 & \multicolumn{1}{c|}{50,0000} & 164,7150 & \multicolumn{1}{c|}{75,2577}                                                  & \multicolumn{1}{c|}{68,2292}                                                 & \multicolumn{1}{c|}{0,5108}  & 783,6182  \\ \hline
-Partición 5-1 & \multicolumn{1}{c|}{97,5352}                                                  & \multicolumn{1}{c|}{95,7895}                                                 & \multicolumn{1}{c|}{63,3333} & 78,3686  & \multicolumn{1}{c|}{77,7778}                                                  & \multicolumn{1}{c|}{70,0000}                                                 & \multicolumn{1}{c|}{53,3333} & 153,8117 & \multicolumn{1}{c|}{75,0000}                                                  & \multicolumn{1}{c|}{65,4639}                                                 & \multicolumn{1}{c|}{0,5360}  & 895,1382  \\ \hline
-Partición 5-2 & \multicolumn{1}{c|}{98,5965}                                                  & \multicolumn{1}{c|}{97,5352}                                                 & \multicolumn{1}{c|}{43,3333} & 107,9202 & \multicolumn{1}{c|}{83,3333}                                                  & \multicolumn{1}{c|}{72,2222}                                                 & \multicolumn{1}{c|}{51,1111} & 162,3525 & \multicolumn{1}{c|}{73,1959}                                                  & \multicolumn{1}{c|}{65,1042}                                                 & \multicolumn{1}{c|}{0,5108}  & 701,9376  \\ \hline
-Media         & \multicolumn{1}{c|}{98,2074}                                                  & \multicolumn{1}{c|}{95,8878}                                                 & \multicolumn{1}{c|}{50,3333} & 96,3421  & \multicolumn{1}{c|}{77,8889}                                                  & \multicolumn{1}{c|}{73,7778}                                                 & \multicolumn{1}{c|}{54,0000} & 152,4923 & \multicolumn{1}{c|}{75,1820}                                                  & \multicolumn{1}{c|}{65,7566}                                                 & \multicolumn{1}{c|}{0,5227}  & 856,4522  \\ \hline
+Partición 1-1 & \multicolumn{1}{c|}{99,6479}                                                  & \multicolumn{1}{c|}{95,0877}                                                 & \multicolumn{1}{c|}{56,6667} & 85,2651  & \multicolumn{1}{c|}{73,8889}                                                  & \multicolumn{1}{c|}{73,3333}                                                 & \multicolumn{1}{c|}{58,8889} & 147,7682 & \multicolumn{1}{c|}{77,0833}                                                  & \multicolumn{1}{c|}{64,4330}                                                 & \multicolumn{1}{c|}{53,2374} & 805,4652  \\ \hline
+Partición 1-2 & \multicolumn{1}{c|}{97,1930}                                                  & \multicolumn{1}{c|}{98,2394}                                                 & \multicolumn{1}{c|}{46,6667} & 97,1011  & \multicolumn{1}{c|}{80,0000}                                                  & \multicolumn{1}{c|}{76,6667}                                                 & \multicolumn{1}{c|}{62,2222} & 130,1093 & \multicolumn{1}{c|}{72,6804}                                                  & \multicolumn{1}{c|}{63,5417}                                                 & \multicolumn{1}{c|}{51,4388} & 797,8680  \\ \hline
+Partición 2-1 & \multicolumn{1}{c|}{97,5352}                                                  & \multicolumn{1}{c|}{96,4912}                                                 & \multicolumn{1}{c|}{63,3333} & 73,5152  & \multicolumn{1}{c|}{76,6667}                                                  & \multicolumn{1}{c|}{79,4444}                                                 & \multicolumn{1}{c|}{47,7778} & 161,7477 & \multicolumn{1}{c|}{73,4375}                                                  & \multicolumn{1}{c|}{65,4639}                                                 & \multicolumn{1}{c|}{52,1583} & 971,4121  \\ \hline
+Partición 2-2 & \multicolumn{1}{c|}{98,9474}                                                  & \multicolumn{1}{c|}{95,0704}                                                 & \multicolumn{1}{c|}{40,0000} & 107,9068 & \multicolumn{1}{c|}{74,4444}                                                  & \multicolumn{1}{c|}{72,2222}                                                 & \multicolumn{1}{c|}{57,7778} & 140,0962 & \multicolumn{1}{c|}{78,8660}                                                  & \multicolumn{1}{c|}{70,3125}                                                 & \multicolumn{1}{c|}{47,1223} & 867,8862  \\ \hline
+Partición 3-1 & \multicolumn{1}{c|}{98,9437}                                                  & \multicolumn{1}{c|}{94,3860}                                                 & \multicolumn{1}{c|}{50,0000} & 90,5736  & \multicolumn{1}{c|}{76,1111}                                                  & \multicolumn{1}{c|}{73,8889}                                                 & \multicolumn{1}{c|}{46,6667} & 173,6694 & \multicolumn{1}{c|}{77,0833}                                                  & \multicolumn{1}{c|}{64,4330}                                                 & \multicolumn{1}{c|}{58,2734} & 916,5146  \\ \hline
+Partición 3-2 & \multicolumn{1}{c|}{98,2456}                                                  & \multicolumn{1}{c|}{93,6620}                                                 & \multicolumn{1}{c|}{53,3333} & 98,4654  & \multicolumn{1}{c|}{79,4444}                                                  & \multicolumn{1}{c|}{75,0000}                                                 & \multicolumn{1}{c|}{53,3333} & 151,6055 & \multicolumn{1}{c|}{75,2577}                                                  & \multicolumn{1}{c|}{66,6667}                                                 & \multicolumn{1}{c|}{53,9568} & 777,3816  \\ \hline
+Partición 4-1 & \multicolumn{1}{c|}{97,5352}                                                  & \multicolumn{1}{c|}{96,8421}                                                 & \multicolumn{1}{c|}{36,6667} & 121,3363 & \multicolumn{1}{c|}{75,0000}                                                  & \multicolumn{1}{c|}{78,8889}                                                 & \multicolumn{1}{c|}{58,8889} & 139,0470 & \multicolumn{1}{c|}{73,9583}                                                  & \multicolumn{1}{c|}{63,9175}                                                 & \multicolumn{1}{c|}{50,7194} & 1047,3006 \\ \hline
+Partición 4-2 & \multicolumn{1}{c|}{97,8947}                                                  & \multicolumn{1}{c|}{95,7746}                                                 & \multicolumn{1}{c|}{50,0000} & 102,9689 & \multicolumn{1}{c|}{82,2222}                                                  & \multicolumn{1}{c|}{66,1111}                                                 & \multicolumn{1}{c|}{50,0000} & 164,7150 & \multicolumn{1}{c|}{75,2577}                                                  & \multicolumn{1}{c|}{68,2292}                                                 & \multicolumn{1}{c|}{51,0791} & 783,6182  \\ \hline
+Partición 5-1 & \multicolumn{1}{c|}{97,5352}                                                  & \multicolumn{1}{c|}{95,7895}                                                 & \multicolumn{1}{c|}{63,3333} & 78,3686  & \multicolumn{1}{c|}{77,7778}                                                  & \multicolumn{1}{c|}{70,0000}                                                 & \multicolumn{1}{c|}{53,3333} & 153,8117 & \multicolumn{1}{c|}{75,0000}                                                  & \multicolumn{1}{c|}{65,4639}                                                 & \multicolumn{1}{c|}{53,5971} & 895,1382  \\ \hline
+Partición 5-2 & \multicolumn{1}{c|}{98,5965}                                                  & \multicolumn{1}{c|}{97,5352}                                                 & \multicolumn{1}{c|}{43,3333} & 107,9202 & \multicolumn{1}{c|}{83,3333}                                                  & \multicolumn{1}{c|}{72,2222}                                                 & \multicolumn{1}{c|}{51,1111} & 162,3525 & \multicolumn{1}{c|}{73,1959}                                                  & \multicolumn{1}{c|}{65,1042}                                                 & \multicolumn{1}{c|}{51,0791} & 701,9376  \\ \hline
+Media         & \multicolumn{1}{c|}{98,2074}                                                  & \multicolumn{1}{c|}{95,8878}                                                 & \multicolumn{1}{c|}{50,3333} & 96,3421  & \multicolumn{1}{c|}{77,8889}                                                  & \multicolumn{1}{c|}{73,7778}                                                 & \multicolumn{1}{c|}{54,0000} & 152,4923 & \multicolumn{1}{c|}{75,1820}                                                  & \multicolumn{1}{c|}{65,7566}                                                 & \multicolumn{1}{c|}{52,2662} & 856,4522  \\ \hline
 \end{tabular}}
 \end{table}
 
@@ -528,20 +528,44 @@ A continuación vemos la tabla comparativa, que tiene la última fila (las media
 \centering
 \caption{Comparativa}
 \label{comparativa}
-\resizebox{\textwidth}{!}{\begin{tabular}{|c|cccc|cccc|cccc|}
+\resizebox{\textwidth}{!}{\begin{tabular}{|c|cccc|cccc|cc|cc|}
 \hline
-     &                                                                               & Wdbc                                                                         &                              &         &                                                                               & Movement                                                                     & Libras                       &          &                                                                               & Arrhythmia                                                                   &                              &          \\ \cline{2-13} 
-     & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T       & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T        \\ \hline
-3-NN & \multicolumn{1}{c|}{96,0563}                                                  & \multicolumn{1}{c|}{96,7308}                                                 & \multicolumn{1}{c|}{0,0000}  & 0,0131  & \multicolumn{1}{c|}{67,7778}                                                  & \multicolumn{1}{c|}{74,1111}                                                 & \multicolumn{1}{c|}{0,0000}  & 0,0336   & \multicolumn{1}{c|}{63,2292}                                                  & \multicolumn{1}{c|}{63,0101}                                                 & \multicolumn{1}{c|}{0,0000}  & 0,1000   \\ \hline
-SFS  & \multicolumn{1}{c|}{97,1531}                                                  & \multicolumn{1}{c|}{94,4806}                                                 & \multicolumn{1}{c|}{85,4000} & 0,4401  & \multicolumn{1}{c|}{75,8889}                                                  & \multicolumn{1}{c|}{69,8333}                                                 & \multicolumn{1}{c|}{89,7778} & 2,0557   & \multicolumn{1}{c|}{78,1368}                                                  & \multicolumn{1}{c|}{69,2762}                                                 & \multicolumn{1}{c|}{97,9856} & 3,8331   \\ \hline
-AGG  & \multicolumn{1}{c|}{98,2427}                                                  & \multicolumn{1}{c|}{95,9931}                                                 & \multicolumn{1}{c|}{49,0000} & 94,3327 & \multicolumn{1}{c|}{79,6111}                                                  & \multicolumn{1}{c|}{73,6111}                                                 & \multicolumn{1}{c|}{53,2222} & 154,6825 & \multicolumn{1}{c|}{76,5314}                                                  & \multicolumn{1}{c|}{65,3404}                                                 & \multicolumn{1}{c|}{51,6906} & 758,3582 \\ \hline
-AM1  & \multicolumn{1}{c|}{98,0319}                                                  & \multicolumn{1}{c|}{95,7828}                                                 & \multicolumn{1}{c|}{48,3333} & 97,6716 & \multicolumn{1}{c|}{78,3889}                                                  & \multicolumn{1}{c|}{73,7778}                                                 & \multicolumn{1}{c|}{51,2222} & 163,9044 & \multicolumn{1}{c|}{74,5613}                                                  & \multicolumn{1}{c|}{64,6113}                                                 & \multicolumn{1}{c|}{50,1079} & 788,9946 \\ \hline
-AM2  & \multicolumn{1}{c|}{98,2074}                                                  & \multicolumn{1}{c|}{95,8878}                                                 & \multicolumn{1}{c|}{50,3333} & 96,3421 & \multicolumn{1}{c|}{77,8889}                                                  & \multicolumn{1}{c|}{73,7778}                                                 & \multicolumn{1}{c|}{54,0000} & 152,4923 & \multicolumn{1}{c|}{75,1820}                                                  & \multicolumn{1}{c|}{65,7566}                                                 & \multicolumn{1}{c|}{0,5227}  & 856,4522 \\ \hline
-AM3  & \multicolumn{1}{c|}{98,0318}                                                  & \multicolumn{1}{c|}{96,7319}                                                 & \multicolumn{1}{c|}{48,3333} & 95,8629 & \multicolumn{1}{c|}{78,2778}                                                  & \multicolumn{1}{c|}{74,1111}                                                 & \multicolumn{1}{c|}{52,7778} & 155,9124 & \multicolumn{1}{c|}{75,0247}                                                  & \multicolumn{1}{c|}{65,5520}                                                 & \multicolumn{1}{c|}{51,5108} & 806,5681 \\ \hline
+     &                                                                               & Wdbc                                                                         &                              &         &                                                                               & Movement                                                                     & Libras                       &          &                                                                               & Arrhythmia                                              &                              &          \\ \cline{2-13} 
+     & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T       & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular} & \multicolumn{1}{c|}{\%\_red} & T        \\ \hline
+3-NN & \multicolumn{1}{c|}{96,0563}                                                  & \multicolumn{1}{c|}{96,7308}                                                 & \multicolumn{1}{c|}{0,0000}  & 0,0131  & \multicolumn{1}{c|}{67,7778}                                                  & \multicolumn{1}{c|}{74,1111}                                                 & \multicolumn{1}{c|}{0,0000}  & 0,0336   & \multicolumn{1}{c|}{63,2292}                                                  & 63,0101                                                 & \multicolumn{1}{c|}{0,0000}  & 0,1000   \\ \hline
+SFS  & \multicolumn{1}{c|}{97,1531}                                                  & \multicolumn{1}{c|}{94,4806}                                                 & \multicolumn{1}{c|}{85,4000} & 0,4401  & \multicolumn{1}{c|}{75,8889}                                                  & \multicolumn{1}{c|}{69,8333}                                                 & \multicolumn{1}{c|}{89,7778} & 2,0557   & \multicolumn{1}{c|}{78,1368}                                                  & 69,2762                                                 & \multicolumn{1}{c|}{97,9856} & 3,8331   \\ \hline
+AGG  & \multicolumn{1}{c|}{98,2427}                                                  & \multicolumn{1}{c|}{95,9931}                                                 & \multicolumn{1}{c|}{49,0000} & 94,3327 & \multicolumn{1}{c|}{79,6111}                                                  & \multicolumn{1}{c|}{73,6111}                                                 & \multicolumn{1}{c|}{53,2222} & 154,6825 & \multicolumn{1}{c|}{76,5314}                                                  & 65,3404                                                 & \multicolumn{1}{c|}{51,6906} & 758,3582 \\ \hline
+AM1  & \multicolumn{1}{c|}{98,0319}                                                  & \multicolumn{1}{c|}{95,7828}                                                 & \multicolumn{1}{c|}{48,3333} & 97,6716 & \multicolumn{1}{c|}{78,3889}                                                  & \multicolumn{1}{c|}{73,7778}                                                 & \multicolumn{1}{c|}{51,2222} & 163,9044 & \multicolumn{1}{c|}{74,5613}                                                  & 64,6113                                                 & \multicolumn{1}{c|}{50,1079} & 788,9946 \\ \hline
+AM2  & \multicolumn{1}{c|}{98,2074}                                                  & \multicolumn{1}{c|}{95,8878}                                                 & \multicolumn{1}{c|}{50,3333} & 96,3421 & \multicolumn{1}{c|}{77,8889}                                                  & \multicolumn{1}{c|}{73,7778}                                                 & \multicolumn{1}{c|}{54,0000} & 152,4923 & \multicolumn{1}{c|}{75,1820}                                                  & 65,7566                                                 & \multicolumn{1}{c|}{52,2662} & 856,4522 \\ \hline
+AM3  & \multicolumn{1}{c|}{98,0318}                                                  & \multicolumn{1}{c|}{96,7319}                                                 & \multicolumn{1}{c|}{48,3333} & 95,8629 & \multicolumn{1}{c|}{78,2778}                                                  & \multicolumn{1}{c|}{74,1111}                                                 & \multicolumn{1}{c|}{52,7778} & 155,9124 & \multicolumn{1}{c|}{75,0247}                                                  & 65,5520                                                 & \multicolumn{1}{c|}{51,5108} & 806,5681 \\ \hline
 \end{tabular}}
 \end{table}
 
+De las anteriores gráficas he sacado unas tablas comparativas, una para los porcentajes de acierto en train, otra para los porcentajes de acierto en test, otra para las tasas de reducción y otra para los tiempos:
 
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.7\textwidth]{train}
+\caption{Tasas de acierto en train} \label{fig:train}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.7\textwidth]{test}
+\caption{Tasas de acierto en test} \label{fig:test}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.7\textwidth]{reduccion}
+\caption{Tasas de reduccion} \label{fig:reduccion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.7\textwidth]{tiempos}
+\caption{Tiempo en segundos} \label{fig:tiempos}
+\end{figure}
 
 \section{Bibliografía}
 \begin{enumerate}
